Adding ecternal links

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv('GLB.Ts+dSST.csv', skiprows=[0])\n",
+    "df1 = pd.read_csv('https://raw.githubusercontent.com/NirmalSankalana/GISS-Surface-Temperature-Analysis/main/GLB.Ts%2BdSST.csv', skiprows=[0])\n",
     "df1.drop(['J-D', 'D-N', 'DJF', 'MAM', 'JJA', 'SON'], axis=1, inplace=True);\n",
     "df1.head()"
    ]
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "df2 = pd.read_csv('NH.Ts+dSST.csv', skiprows=[0])\n",
+    "df2 = pd.read_csv('https://raw.githubusercontent.com/NirmalSankalana/GISS-Surface-Temperature-Analysis/main/NH.Ts%2BdSST.csv', skiprows=[0])\n",
     "df2.drop(['J-D', 'D-N', 'DJF', 'MAM', 'JJA', 'SON'], axis=1, inplace=True);\n",
     "df2.head()"
    ]
@@ -489,7 +489,7 @@
     }
    ],
    "source": [
-    "df3 = pd.read_csv('SH.Ts+dSST.csv', skiprows=[0])\n",
+    "df3 = pd.read_csv('https://raw.githubusercontent.com/NirmalSankalana/GISS-Surface-Temperature-Analysis/main/SH.Ts%2BdSST.csv', skiprows=[0])\n",
     "df3.drop(['J-D', 'D-N', 'DJF', 'MAM', 'JJA', 'SON'], axis=1, inplace=True);\n",
     "df3.head()"
    ]
